// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Checkbox /> > Snapshots > should match snapshot with disabled prop 1`] = `
<div>
  <label
    class="Checkbox_label__6vt7xv3"
  >
    <input
      class="Checkbox_field__6vt7xv2"
      disabled=""
      type="checkbox"
    />
    <span
      class="Checkbox_icon__6vt7xv0"
    />
    <span
      class="Checkbox_text__6vt7xv1"
    />
  </label>
</div>
`;

exports[`<Checkbox /> > Snapshots > should match snapshot without props 1`] = `
<div>
  <label
    class="Checkbox_label__6vt7xv3"
  >
    <input
      class="Checkbox_field__6vt7xv2"
      type="checkbox"
    />
    <span
      class="Checkbox_icon__6vt7xv0"
    />
    <span
      class="Checkbox_text__6vt7xv1"
    />
  </label>
</div>
`;
